2008-10-10  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs: Reset after using
	markup, or the same attributes will be applied to later SetText
	calls.

2008-10-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs: Fix NRE
	on commiting selection. The code was relying on keeping the
	completion list; recent changes disposed it when the window was
	hidden.

2008-10-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Gui.Completion/CompletionData.cs:
	* MonoDevelop.Projects.Gui.Completion/CompletionDataList.cs:
	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs: New
	CompletionDataList API to replace CompletionDataProvider.

	* Makefile.am:
	* MonoDevelop.Projects.Gui.mdp: Updated.

	* MonoDevelop.Projects.Gui.Completion/ICompletionDataProvider.cs:
	* MonoDevelop.Projects.Gui.Completion/CodeCompletionDataProvider.cs:
	Removed.

2008-10-09  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MonoDevelop.Projects.Gui.mdp:
	* MonoDevelop.Projects.Gui.Completion/ICompletionData.cs:
	* MonoDevelop.Projects.Gui.Completion/IOverloadedCompletionData.cs:
	Rename file.

2008-10-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs:
	* MonoDevelop.Projects.Gui.Completion/CompletionData.cs:
	* MonoDevelop.Projects.Gui.Completion/ICompletionData.cs:
	* MonoDevelop.Projects.Gui.Completion/CodeCompletionData.cs:
	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs:
	* MonoDevelop.Projects.Gui.Completion/IOverloadedCompletionData.cs:
	* MonoDevelop.Projects.Gui.Completion/CodeCompletionDataProvider.cs:
	Tidy up ICompletionData API.

	* Makefile.am:
	* MonoDevelop.Projects.Gui.mdp: Updated.

2008-10-09  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MonoDevelop.Projects.Gui.mdp: Add a reference to System.Core.
