@@ -1,3 +1,8 @@
+2008-10-13  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs: Disable the
+	selection when the completion string is empty.
+
 2008-10-10  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs: Reset after using
